Implementada puntuación, buscador dinámico y refactor Singleton
-He cambiado por el patron SIngleton en ConexionesBD (por la clase vista)
-HE añadido  lógica de puntuación 1-5 en LibroDAO y ColeccionDAO
-Sistema de filtrado en tiempo real en la pantalla principal.
-Funcionalidad de borrado de registros en la colección personal.
-Mejora de usabilidad con Prompt Texts en formularios., para saber que iba en cada cuadradito
-Reorganización de archivos SQL.